fix grid gap between lib items

--- a/src/components/LibraryMenuItems.scss
+++ b/src/components/LibraryMenuItems.scss
@@ -62,6 +62,7 @@
     &__items {
       max-height: 50vh;
       overflow: auto;
+      margin-top: 0.5rem;
     }
   }
 }
